@@ -1,3 +1,7 @@
+2014-10-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* frame.el (make-frame): Use t rather than nil for `w' (bug#18653).
+
 2014-10-08  Leo Liu  <sdl.web@gmail.com>
 
 	* emacs-lisp/cl-extra.el (cl-fresh-line): New function.
@@ -9,8 +13,8 @@
 
 2014-10-08  Leo Liu  <sdl.web@gmail.com>
 
-	* progmodes/cfengine.el (cfengine3-make-syntax-cache): Always
-	return a syntax.  Replace call-process-shell-command with
+	* progmodes/cfengine.el (cfengine3-make-syntax-cache):
+	Always return a syntax.  Replace call-process-shell-command with
 	process-file.  Ensure cfengine-mode-syntax-functions-regex is
 	always set.  Ensure cache when cfengine-cf-promises fails.
 	(Bug#18620)
